--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
+    "ng2-img-cropper": "^0.9.0",
     "ng2-toastr": "^4.1.2",
     "ngx-progressbar": "^2.0.3",
     "rxjs": "^5.1.0",
