--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ng2-img-cropper": "^0.9.0",
     "ng2-toastr": "^4.1.2",
     "ngx-progressbar": "^2.0.3",
+    "primeng": "^4.1.2",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
