--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
+    "ng2-dnd": "^4.2.0",
     "ng2-img-cropper": "^0.9.0",
     "ng2-toastr": "^4.1.2",
     "ngx-progressbar": "^2.0.3",
-    "primeng": "^4.1.2",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
